# analytics-vms

./: .gitignore  AGENTS.md  DEV_NOTES.md  README.md  pyproject.toml
docs/: csv-contract.md  mvp-1-spec.md  mvps.md  performance-and-network.md  runtime-flow.md  security.md
examples/: cameras.example.csv  vms_input_dummy_repo.csv  vms_output_dummy_detailed_example.csv  vms_output_dummy_summary_by_site_example.csv  vms_output_dummy_summary_example.csv
src/analytics_vms/: __init__.py  batch_check.py  camera_check.py  classify.py  cli.py  config.py  detection.py  frames.py  inventory.py  probes.py  reports.py  rtsp.py  visual_diagnostics.py
tests/: test_batch_check.py  test_camera_check.py  test_cli.py  test_frames.py  test_imports.py  test_inventory.py  test_probes.py  test_reports.py  test_rtsp.py  test_visual_diagnostics.py
